Try to fix double launch bug in JPackage